# ner-visualisation

./: .gitignore  README.md  pyproject.toml  wsgi.py
app/: __init__.py
app/controllers/: components_controller.py  home_controller.py
app/dependencies/: model.py
app/helpers/: docs.py  render.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: home.jinja2  layout.jinja2
